--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server server.json -w -d 750 -p 3030"
   },
   "dependencies": {
+    "json-server": "^0.17.0",
     "next": "12.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
-    "eslint": "7",
+    "@types/react": "^17.0.27",
+    "eslint": "^8.1.0",
     "eslint-config-next": "12.0.0"
   }
 }
